- small performance improvements for conv operators